<resources>
    <string name="app_name">ElymBot</string>

    <string name="common_back">Back</string>
    <string name="common_save">Save</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_add">Add</string>
    <string name="common_remove">Remove</string>
    <string name="common_close">Close</string>
    <string name="common_enabled">Enabled</string>
...
